--- a/index-iframe.html
+++ b/index-iframe.html
@@ -19,7 +19,7 @@
       <!-- ここを自分の URL に置き換えてください -->
       <!-- 例: src="https://<username>.github.io/wxo-embed/index.html" -->
       <!-- あるいはローカルで同じフォルダにある index.html を読み込むなら src="index.html" -->
-      <iframe id="testFrame" src="https://<username>.github.io/wxo-embed/index.html" allowfullscreen></iframe>
+      <iframe id="testFrame" src="https://matsuo-iguazu.github.io/wxo-embed/index.html" allowfullscreen></iframe>
     </div>
   </div>
   <script>
